--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
+    "vue-router": "^4.0.12",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
